Refactor code structure and enhance readability in multiple modules

--- a/index.html
+++ b/index.html
@@ -7,6 +7,30 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Video Management System</title>
 </head>
+<style>
+  @font-face {
+    font-family: 'PlusJakartaSans';
+    src: url('/src/assets/fonts/PlusJakartaSans-Regular.woff2') format('woff2'),
+      url('/src/assets/fonts/PlusJakartaSans-Regular.woff') format('woff');
+    font-weight: 400;
+    font-style: normal;
+  }
+
+  @font-face {
+    font-family: 'PlusJakartaSans';
+    src: url('/src/assets/fonts/PlusJakartaSans-Italic.woff2') format('woff2'),
+      url('/src/assets/fonts/PlusJakartaSans-Italic.woff') format('woff');
+    font-weight: 400;
+    font-style: italic;
+  }
+
+  html,
+  body,
+  * {
+    font-family: 'PlusJakartaSans', Arial, sans-serif !important;
+  }
+</style>
+</head>
 
 <body>
   <div id="root"></div>
